Final touches to the Newsfeed
-Newslist loading state (skeletons)
-Empty state if api down (text)
-Powered by now linking to cryptopanic.com + ui adjustments
-Articles without image now take 100% of avail width

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -6087,6 +6087,7 @@
   },
   "newsfeed": {
     "title": "Newsfeed",
-    "poweredByCryptopanic": "Powered by Cryptopanic"
+    "poweredByCryptopanic": "Powered by Cryptopanic",
+    "noPosts": "No posts available currently"
   }
 }
