File apps/ledger-live-mobile/src/locales/en/common.json was updated on ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -811,6 +811,13 @@
       "title" : "Устройство заблокировано",
       "description" : "Разблокируйте устройство и повторите попытку.",
       "descriptionWithProductName" : "Разблокируйте {{ productName }} и повторите попытку."
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "crash" : {
@@ -1495,25 +1502,20 @@
     "stepProtect" : {
       "bullets" : {
         "0" : {
-          "title" : "Посмотреть ",
-          "label" : "Узнайте, как взаимодействовать с устройством, по инструкциям на экране."
+          "title" : "Select “Restore”",
+          "label" : "Press both buttons simultaneously to select."
         },
         "1" : {
-          "title" : "Выберите «Restore» (Восстановить)",
-          "label" : "Для подтверждения выбора нажмите обе кнопки одновременно."
-        },
-        "2" : {
-          "title" : "Выберите «Restore with Protect» (Восстановить с помощью Protect)",
-          "label" : "Для подтверждения выбора нажмите обе кнопки одновременно."
+          "title" : "Select “Restore using Ledger Recover”",
+          "label" : "Press both buttons simultaneously to select."
         }
       },
       "nextStep" : "Продолжить",
       "extraInfo" : {
-        "tooltip" : "Не отображается в Ledger",
-        "title" : "Почему в Ledger не отображается опция восстановления с помощью Protect?",
-        "desc1" : "Скорее всего, ваше устройство не совместимо с Protect. Но не стоит волноваться: мы расскажем, как всё исправить.",
-        "desc2" : "Свяжитесь с нами через # и выберите «Мой Ledger не показывает опцию восстановления с помощью Protect». Вам обязательно помогут.",
-        "cta" : "Выполните действия вручную",
+        "tooltip" : "I don't see 'Restore using Ledger Recover'",
+        "title" : "The OS on your Ledger Nano X needs to be updated",
+        "desc" : "You can try updating the OS or contact Ledger support for assistance.",
+        "cta" : "Learn how to update",
         "supportLink" : "Связаться с Поддержкой Ledger"
       }
     },
@@ -2558,7 +2560,7 @@
         "goToSettings" : "Перейдите в настройки системы"
       },
       "allowed" : {
-        "title" : "Допуск уведомлений",
+        "title" : "Уведомления",
         "desc" : "Получайте уведомления о криптоактивах, ситуации на рынке и не только"
       },
       "transactions" : {
@@ -2585,7 +2587,7 @@
         "title" : "Уведомления о курсах",
         "desc" : "Настраивайте оповещения о курсах любимых криптовалют, чтобы не пропустить движения рынка"
       },
-      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся нашим партнёрам."
+      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся сторонним операторам услуг."
     },
     "help" : {
       "title" : "Помощь",
@@ -3298,6 +3300,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "Подключить кошелёк к децентрализованным приложениям"
     }
   },
   "signMessage" : {
@@ -5678,11 +5684,11 @@
       }
     },
     "status" : {
-      "title" : "Некоторые неполадки требуют вашего внимания",
-      "title_plural" : "Некоторые неполадки требуют вашего внимания",
+      "title" : "Обратите внимание",
+      "title_plural" : "Обратите внимание",
       "desc" : {
         "0" : "Они изучаются и скоро будут исправлены.",
-        "1" : "Если вы столкнулись с какой-либо неполадкой из указанных, свяжитесь с <0>Поддержкой Ledger</0>"
+        "1" : "Если вы столкнулись с чем-то из этого, свяжитесь с <0>Поддержкой Ledger</0>"
       },
       "cta" : {
         "ok" : "Понятно"
